test/hotCases/errors/self-decline/a.js
import b from "./b";

export default b;

if(module.hot) {
	module.hot.decline();
}
